--- a/home.css
+++ b/home.css
@@ -80,7 +80,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url(../images/myimage.jpg);
+  background-image: URL(../-UGR-1535-15-portfolio-profile-html-css-js2/myimage.jpg);
   background-size: cover;
   background-position: center;
   opacity: 0.5;
