--- a/about.css
+++ b/about.css
@@ -174,27 +174,27 @@
 }
 
 .toper .hobo p:nth-of-type(1) {
-    background-image: url("/new/myart.png");
+    background-image: url("../-UGR-1535-15-portfolio-profile-html-css-js2/myart.png");
 }
 
 .toper .hobo p:nth-of-type(2) {
-    background-image: url("/new/gameimage.png");
+    background-image: url("../-UGR-1535-15-portfolio-profile-html-css-js2/gameimage.png");
 }
 
 .toper .hobo p:nth-of-type(3) {
-    background-image: url("/new/rollerimage.png");
+    background-image: url("../-UGR-1535-15-portfolio-profile-html-css-js2/rollerimage.png");
 }
 
 .toper .trav p:nth-of-type(1) {
-    background-image: url("/new/franceimage.png");
+    background-image: url("../-UGR-1535-15-portfolio-profile-html-css-js2/franceimage.png");
 }
 
 .toper .trav p:nth-of-type(2) {
-    background-image: url("/new/japanimage.png");
+    background-image: url("../-UGR-1535-15-portfolio-profile-html-css-js2/japanimage.png");
 }
 
 .toper .trav p:nth-of-type(3) {
-    background-image: url("/new/swizimage.png");
+    background-image: url("../-UGR-1535-15-portfolio-profile-html-css-js2/swizimage.png");
 }
 footer {
     background: #00C6C2;
@@ -407,27 +407,27 @@ color: #324B4A;
 }
 
 .toper .hobo p:nth-of-type(1) {
-    background-image: url("/new/myart.png");
+    background-image: url("../-UGR-1535-15-portfolio-profile-html-css-js2/myart.png");
 }
 
 .toper .hobo p:nth-of-type(2) {
-    background-image: url("/new/gameimage.png");
+    background-image: url("../-UGR-1535-15-portfolio-profile-html-css-js2/gameimage.png");
 }
 
 .toper .hobo p:nth-of-type(3) {
-    background-image: url("/new/rollerimage.png");
+    background-image: url("../-UGR-1535-15-portfolio-profile-html-css-js2/rollerimage.png");
 }
 
 .toper .trav p:nth-of-type(1) {
-    background-image: url("/new/franceimage.png");
+    background-image: url("../-UGR-1535-15-portfolio-profile-html-css-js2/franceimage.png");
 }
 
 .toper .trav p:nth-of-type(2) {
-    background-image: url("../images/japanimage.png");
+    background-image: url("../-UGR-1535-15-portfolio-profile-html-css-js2/japanimage.png");
 }
 
 .toper .trav p:nth-of-type(3) {
-    background-image: url("/new/swizimage.png");
+    background-image: url("../-UGR-1535-15-portfolio-profile-html-css-js2/swizimage.png");
 }
 footer {
     background: #00C6C2;
@@ -650,27 +650,27 @@ footer {
 }
 
 .toper .hobo p:nth-of-type(1) {
-    background-image: url("/new/myart.png");
+    background-image: url("../-UGR-1535-15-portfolio-profile-html-css-js2/myart.png");
 }
 
 .toper .hobo p:nth-of-type(2) {
-    background-image: url("/new/gameimage.png");
+    background-image: url("../-UGR-1535-15-portfolio-profile-html-css-js2/gameimage.png");
 }
 
 .toper .hobo p:nth-of-type(3) {
-    background-image: url("/new/rollerimage.png");
+    background-image: url("../-UGR-1535-15-portfolio-profile-html-css-js2/rollerimage.png");
 }
 
 .toper .trav p:nth-of-type(1) {
-    background-image: url("/new/franceimage.png");
+    background-image: url("../-UGR-1535-15-portfolio-profile-html-css-js2/franceimage.png");
 }
 
 .toper .trav p:nth-of-type(2) {
-    background-image: url("/new/japanimage.png");
+    background-image: url("../-UGR-1535-15-portfolio-profile-html-css-js2/japanimage.png");
 }
 
 .toper .trav p:nth-of-type(3) {
-    background-image: url("/new/swizimage.png");
+    background-image: url("../-UGR-1535-15-portfolio-profile-html-css-js2/swizimage.png");
 }
 footer {
     background: #00C6C2;
@@ -812,27 +812,27 @@ footer {
 }
 
 .toper .hobo p:nth-of-type(1) {
-    background-image: url("/new/myart.png");
+    background-image: url("../-UGR-1535-15-portfolio-profile-html-css-js2/myart.png");
 }
 
 .toper .hobo p:nth-of-type(2) {
-    background-image: url("/new/gameimage.png");
+    background-image: url("../-UGR-1535-15-portfolio-profile-html-css-js2/gameimage.png");
 }
 
 .toper .hobo p:nth-of-type(3) {
-    background-image: url("/new/rollerimage.png");
+    background-image: url("../-UGR-1535-15-portfolio-profile-html-css-js2/rollerimage.png");
 }
 
 .toper .trav p:nth-of-type(1) {
-    background-image: url("/new/franceimage.png");
+    background-image: url("../-UGR-1535-15-portfolio-profile-html-css-js2/franceimage.png");
 }
 
 .toper .trav p:nth-of-type(2) {
-    background-image: url("/new/japanimage.png");
+    background-image: url("../-UGR-1535-15-portfolio-profile-html-css-js2/japanimage.png");
 }
 
 .toper .trav p:nth-of-type(3) {
-    background-image: url("/new/swizimage.png");
+    background-image: url("../-UGR-1535-15-portfolio-profile-html-css-js2/swizimage.png");
 }
 .mider .dream{
     background-color: #158582;
@@ -1022,15 +1022,15 @@ footer {
   }
   
   .image-paragraph-container1:nth-of-type(1) {
-    background-image: url("/new/myart.png");
+    background-image: url("../-UGR-1535-15-portfolio-profile-html-css-js2/myart.png");
   }
   
   .image-paragraph-container1:nth-of-type(2) {
-    background-image: url("/new/gameimage.png");
+    background-image: url("../-UGR-1535-15-portfolio-profile-html-css-js2/gameimage.png");
   }
   
   .image-paragraph-container1:nth-of-type(3) {
-    background-image: url("/new/rollerimage.png");
+    background-image: url("../-UGR-1535-15-portfolio-profile-html-css-js2/rollerimage.png");
   }
   .trav {
     display: grid;
@@ -1061,15 +1061,15 @@ footer {
 }
 
   .image-paragraph-container2:nth-of-type(1) {
-    background-image: url("/new/franceimage.png");
+    background-image: url("../-UGR-1535-15-portfolio-profile-html-css-js2/franceimage.png");
   }
   
   .image-paragraph-container2:nth-of-type(2) {
-    background-image: url("/new/japanimage.png");
+    background-image: url("../-UGR-1535-15-portfolio-profile-html-css-js2/japanimage.png");
   }
   
   .image-paragraph-container2:nth-of-type(3) {
-    background-image: url("/new/swizimage.png");
+    background-image: url("../-UGR-1535-15-portfolio-profile-html-css-js2/swizimage.png");
   }
   
   .hobo h2, .trav h2 {
